<resources>
    <string name="app_name">Muse</string>
    <string name="title_home">Главная</string>
    <string name="title_playlist">Плейлист</string>
    <string name="title_profile">Профиль</string>
    <string name="title_search">Поиск</string>
    <string name="title_settings">Настройки</string>
    <string name="home">Home</string>
    <string name="_27_27">Имя: Анна Возраст: 27 лет Город: Москва О себе: Привет! Меня зовут Анна, мне 27 лет, живу в Москве и работаю графическим дизайнером. Люблю создавать красивые вещи и делиться творчеством.</string>
    <string name="todo">TODO</string>
    <string name="поиск">Введите текст для поиска</string>
    <string name="search_hint">Найти песни или исполнителей</string>
    <string name="search_icon">Иконка поиска</string>
    <string name="description">Жизнь – это один большой саундтрек, а я всегда нахожусь в поиске своего следующего любимого трека. Делитесь своими рекомендациями со мной, и давайте вместе создадим плейлист для настроения!</string>
    <string name="play_button_desc">desc</string>
    <string name="ввв">Слушать хиты</string>
    <string name="вввв">Понравившиеся</string>
    <string name="login">Войти</string>
    <string name="log_in">Войти</string>
    <string name="register1">Регистрация</string>
    <string name="рег">Регистрация</string>
    <string name="email2">Email</string>
    <string name="вввав">Вход</string>
    <string name="ввапв">Пароль</string>
    <string name="welcome_message">Добро пожаловать! \nВы можете создать учетную запись или войти в уже существующую!</string>
    <string name="register">Зарегистрироваться</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="в">По исполнителю</string>
    <string name="ввввввв">По стране</string>
    <string name="ввввввввв">По жанру</string>
</resources>
