<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_man_24"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_playlist"
        android:icon="@drawable/baseline_library_music_24"
        android:title="@string/title_playlist" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/title_settings" />
</menu>
