<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.talkerbanda.viewmodel.SearchViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".search.SearchFragment">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/fon3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/rounded_corner_background">

            <EditText
                android:id="@+id/search_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/search_field_background"
                android:drawableLeft="@drawable/baseline_search_24"
                android:drawablePadding="8dp"
                android:hint="@string/search_hint"
                android:padding="12dp"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Фильтры -->
            <LinearLayout
                android:id="@+id/filter_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/filter_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/в" />

                <Spinner
                    android:id="@+id/spinner_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/filter_interests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ввввввввв" />

                <Spinner
                    android:id="@+id/spinner_interests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/filter_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ввввввв" />

                <Spinner
                    android:id="@+id/spinner_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>


















