<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.talkerbanda.viewmodel.HomeViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeFragment">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/fon3" />

        <!-- Search Bar -->
        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:hint="@string/search_hint"
            android:drawableEnd="@android:drawable/ic_menu_search"
            android:padding="10dp"
            android:background="@drawable/search_bar_bg"
            android:layout_alignParentTop="true" />

        <!-- Play Button and Text -->
        <LinearLayout
            android:id="@+id/play_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/play_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_play_circle_24"
                app:tint="@android:color/white"
                android:contentDescription="@string/play_button_desc" />

            <TextView
                android:id="@+id/play_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ввв"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/likedSongsButton"
            android:layout_width="297dp"
            android:layout_height="324dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="59dp"
            android:layout_marginTop="498dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="108dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/roundeddd" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="85dp"
            android:layout_marginTop="574dp"
            android:layout_marginEnd="231dp"
            android:layout_marginBottom="138dp"
            android:text="TextView" />


    </RelativeLayout>
</layout>





